/*
 * Copyright (C) 2015 Red Bull Media House GmbH <http://www.redbullmediahouse.com> - all rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

// ------------------------------------------------------------------------
//  Run 'build.proto' from the project's root directory for compilation
// ------------------------------------------------------------------------

option java_package = "com.rbmhtechnology.eventuate.serializer";
option optimize_for = SPEED;

import "src/main/protobuf/DurableEventFormats.proto";
import "src/main/protobuf/ReplicationFilterFormats.proto";

message ReplicationEndpointInfoFormat {
  required string endpointId = 1;
  repeated string logNames = 2;
}

message GetReplicationEndpointInfoFormat {
  // no fields
}

message GetReplicationEndpointInfoSuccessFormat {
  required ReplicationEndpointInfoFormat info = 1;
}

message ReplicationReadEnvelopeFormat {
  optional ReplicationReadFormat payload = 1;
  optional string logName = 2;
}

message ReplicationReadFormat {
  optional int64 fromSequenceNr = 1;
  optional int32 maxNumEvents = 2;
  optional ReplicationFilterTreeFormat filter = 3;
  optional string targetLogId = 4;
  optional string replicator = 5;
  optional VectorTimeFormat currentTargetVectorTime = 6;
}

message ReplicationReadSuccessFormat {
  repeated DurableEventFormat events = 1;
  optional int64 replicationProgress = 2;
  optional string targetLogId = 3;
  optional VectorTimeFormat currentSourceVectorTime = 4;
}

message ReplicationReadFailureFormat {
  optional string cause = 1;
  optional string targetLogId = 2;
}

message ReplicationDueFormat {
  // no fields
}
